--- a/portfolio-two.html
+++ b/portfolio-two.html
@@ -17,6 +17,24 @@
         </ul>
     </nav>
     <h1>Portfolio Two:</h1>
+
+    <div class="card">
+        <a  href="https://en.wikipedia.org/wiki/javascript" target="_blank">
+            <img src="https://d1yjjnpx0p53s8.cloudfront.net/styles/logo-thumbnail/s3/082014/js1_0.png?itok=9fCD5b30" alt="JavaScript">
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="https://git-scm.com/" target="_blank">
+            <img src="https://git-scm.com/images/logos/downloads/Git-Icon-1788C.png" alt="Git">
+        </a>
+    </div>
+
+    <div class="card">
+        <a href="https://github.com/" target="_blank">
+            <img src="https://pbs.twimg.com/profile_images/1414990564408262661/r6YemvF9_400x400.jpg" alt="GitHub">
+        </a>
+    </div>
     
 </body>
 </html>
